grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: carpool.grafana.info
      http:
        paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: grafana
                  port:
                    number: 3000
